# codex-desktop-linux

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  flake.nix  install.sh
.github/: labels.json  pull_request_template.md
.github/workflows/: cachix.yml  ci.yml  computer-use-sync-reminder.yml  contributor-pr-limit.yml  install-deps.yml  manage-labels.yml  sync-private-upstream.yml  update-codex-hash.yml  upstream-build-app.yml
computer-use-linux/: Cargo.toml
computer-use-linux/src/: abs_pointer.rs  chrome_runtime.rs  cosmic_helper.rs  diagnostics.rs  lib.rs  main.rs  server.rs  ydotool.rs
docs/: build-and-packaging.md  label-governance.md  launcher-performance.md  linux-computer-use.md  linux-features-architecture.md  nix.md  updater.md  upstream-dmg-acceptance.md  upstream-dmg-intelligence.md  upstream-dmg-watchdog.md
docs/agents/: generated-and-runtime-notes.md  repository-map.md
global-dictation-linux/: Cargo.toml
global-dictation-linux/src/: main.rs
launcher/: cli-launch-path.py  start.sh.template  webview-server.py
linux-features/: README.md
linux-features/agent-workspace/: patch.js  test.js
linux-features/api-key-service-tier/: patch.js  test.js
nix/: home-manager-module.nix  linux-features-test.nix  linux-features.nix
scripts/: bootstrap-wizard.sh  build-appimage.sh  ci-local.sh  patch-linux-window-ui.js  patch-linux-window-ui.test.js  sudo-with-alert.sh  workspace-root-open-targets-patch.test.js
tests/: launcher_warm_start_recovery.sh  scripts_smoke.sh  webview_probe_equivalence.sh
updater/: Cargo.toml
(+139 files in other folders)
